k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rate-my-guinness-service
spec:
  type: ClusterIP
  selector:
    app: rate-my-guinness
  ports:
    - port: 5000
      targetPort: 5000
